--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -22,6 +22,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df =  pd.read_csv('precios.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dependencia\n",
+       "Error::: Descripción detallada,Unidad de medida,Cantidad mínima,Cantidad máxima,Precio unitario sin impuestos,Monto total cantidad mínima,Monto total cantidad máxima    296\n",
+       "Error::: Descripción detallada,Unidad de medida,Cantidad mínima,Cantidad máxima,Precio unitario sin impuestos,Monto total cantidad mínima,                               209\n",
+       "Error::: Descripción detallada,Unidad de medida,Precio unitario sin impuestos,Monto de la Oferta,IVA,Otros impuestos,Monto total de la oferta                            180\n",
+       "Error::: Descripción detallada,Unidad de medida,Precio unitario sin impuestos,Monto de la Oferta,IVA,,                                                                   100\n",
+       "Error::: Descripción detallada,Unidad de medida,Cantidad mínima,Cantidad máxima,,,                                                                                        30\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Dependencia'][df['Dependencia'].str.startswith(\"Error\")].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5692,)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Dependencia'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
