primera versión de nuevos layouts

--- a/prueba_pandas.ipynb
+++ b/prueba_pandas.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,11 +22,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "df =  pd.read_csv('precios.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1913"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "procedimientos_with_error = df['Número del procedimiento o contratación'][df['Dependencia'].str.startswith(\"Error\")].unique()\n",
+    "len(procedimientos_with_error)"
    ]
   },
   {
@@ -37,13 +78,7 @@
     {
      "data": {
       "text/plain": [
-       "Dependencia\n",
-       "Error::: Descripción detallada,Unidad de medida,Cantidad mínima,Cantidad máxima,Precio unitario sin impuestos,Monto total cantidad mínima,Monto total cantidad máxima    296\n",
-       "Error::: Descripción detallada,Unidad de medida,Cantidad mínima,Cantidad máxima,Precio unitario sin impuestos,Monto total cantidad mínima,                               209\n",
-       "Error::: Descripción detallada,Unidad de medida,Precio unitario sin impuestos,Monto de la Oferta,IVA,Otros impuestos,Monto total de la oferta                            180\n",
-       "Error::: Descripción detallada,Unidad de medida,Precio unitario sin impuestos,Monto de la Oferta,IVA,,                                                                   100\n",
-       "Error::: Descripción detallada,Unidad de medida,Cantidad mínima,Cantidad máxima,,,                                                                                        30\n",
-       "Name: count, dtype: int64"
+       "603"
       ]
      },
      "execution_count": 9,
@@ -52,27 +87,110 @@
     }
    ],
    "source": [
-    "df['Dependencia'][df['Dependencia'].str.startswith(\"Error\")].value_counts()"
+    "len(df['Dependencia'][df['Dependencia'].str.startswith(\"Error\")])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5692,)"
+       "603"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Dependencia'].shape"
+    "len(df[df['Número del procedimiento o contratación'].isin(procedimientos_with_error)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df = df[~df['Número del procedimiento o contratación'].isin(procedimientos_with_error)].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se eliminaron 603 registros con error\n"
+     ]
+    }
+   ],
+   "source": [
+    "cant_eliminada = len(df) - len(new_df)\n",
+    "print(f\"Se eliminaron {cant_eliminada} registros con error\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df['total cantidad minima'] = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df.to_csv('precios.csv', index=False,  encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_c = pd.read_csv('concluidos.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_df_c = df_c[~df_c['num_proc'].isin(procedimientos_with_error)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se eliminaron 603 registros con error de precios y 38 de concluidos\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "cant_eliminada = len(df) - len(new_df)\n",
+    "cant_eliminada_conc = len(df_c) - len(new_df_c)\n",
+    "print(f\"Se eliminaron {cant_eliminada} registros con error de precios y {cant_eliminada_conc} de concluidos\")"
    ]
   },
   {
@@ -80,18 +198,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#T1\n",
+    "Error::: Descripción detallada, Unidad de medida,Precio unitario sin impuestos,Monto de la Oferta,\n",
+    "IVA,Otros impuestos,Monto total de la oferta\n",
+    "#t2\n",
+    "Error::: Descripción detallada, Unidad de medida,Cantidad mínima,Cantidad máxima,3\n",
+    "Precio unitario sin impuestos,Monto total cantidad mínima,Monto total cantidad máxima\n",
+    "\n",
+    "\n",
+    "#Original\n",
+    "Descripción detallada, Unidad de medida, Cantidad solicitada, Precio unitario sin impuestos, Subtotal, IVA,Otros impuestos, Total"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "desc_det 0, prec_unit_sin_impuestos 3, subtotal 4, total 7"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desc_det = 0\n",
+    "prec_unit_sin_impuestos = 3\n",
+    "subtotal = 4\n",
+    "total = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,17 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ya está en la bdd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if procedimientos_guardados['num_proc'].str.contains('').any():\n",
     "            print(\"ya está en la bdd\")"
@@ -125,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,24 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "37801\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(random.choice(claves))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,17 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "driver correctamente inicializado.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Se metio un error debido a la deshabilitación de cookies de 3ros en chrome.\n",
     "executable_path = ChromeDriverManager().install()\n",
@@ -214,16 +342,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver.get('https://upcp-compranet.hacienda.gob.mx/sitiopublico/#/sitiopublico/detalle/b005f29806134df89466ca3c04d8a392/proyecto')"
+    "driver.get('https://upcp-compranet.hacienda.gob.mx/sitiopublico/#/sitiopublico/detalle/0a025e8c44364c3fb9fdb6032ee160d3/procedimiento')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xp = '//*[contains(text(),\"DATOS RELEVANTES DEL CONTRATO\")]/ancestor::ul/following-sibling::div//thead/tr/th'\n",
+    "cabeceras = driver.find_elements(By.XPATH, xp )    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for cabecera in cabeceras:\n",
+    "    print(cabecera.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if cabeceras[0].text == 'Descripción detallada' and cabeceras[3].text == 'Precio unitario sin impuestos' and\\\n",
+    "cabeceras[4].text == 'Subtotal' and cabeceras[7].text == 'Total':\n",
+    "    ind_desc = 0\n",
+    "    ind_prec = 3\n",
+    "    ind_subt = 4\n",
+    "    ind_tota = 7\n",
+    "elif cabeceras[0].text == 'Descripción detallada' and cabeceras[2].text == 'Precio unitario sin impuestos' and\\\n",
+    "cabeceras[3].text == 'Monto de la Oferta' and cabeceras[6].text == 'Monto total de la oferta':\n",
+    "    ind_desc = 0\n",
+    "    ind_prec = 2\n",
+    "    ind_subt = 3\n",
+    "    ind_tota = 6\n",
+    "elif cabeceras[0].text == 'Descripción detallada' and cabeceras[4].text == 'Precio unitario sin impuestos' and\\\n",
+    "cabeceras[5].text == 'Monto total cantidad mínima' and cabeceras[6].text == 'Monto total de la oferta':\n",
+    "    ind_desc = 0\n",
+    "    ind_prec = 4\n",
+    "    ind_cant_minima = 5\n",
+    "    ind_tota = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if juan:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xp = '//*[contains(text(),\"Código de contrato: \")]/parent::label/following-sibling::p-table//div[contains(@class,\"unfrozen\")]//thead/tr/th'\n",
+    "cabeceras = driver.find_elements(By.XPATH, xp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,25 +465,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Obteniendo economicos pag: 1\n",
-      "  Obteniendo economicos pag: 2\n",
-      "  Obteniendo economicos pag: 3\n",
-      "  Obteniendo economicos pag: 4\n",
-      "  Obteniendo economicos pag: 5\n",
-      "  Obteniendo economicos pag: 6\n",
-      "  Obteniendo economicos pag: 7\n",
-      "  Obteniendo economicos pag: 8\n",
-      "  no hay más páginas disponibles\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "economicos_list = []\n",
     "economic_ids = []\n",
@@ -344,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,24 +547,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mi\u001b[39m\n",
-      "i\n",
-      "i\n",
-      "i\n",
-      "i\n",
-      "\u001b[33mi\n",
-      "i\n",
-      "i\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(Fore.RED+ 'i'+Fore.RESET)\n",
     "print('i')\n",
@@ -384,31 +563,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31m 0\n",
-      "\u001b[31m 1\n",
-      "\u001b[31m 2\n",
-      "\u001b[31m 3\n",
-      "\u001b[31m 4\n",
-      "\u001b[31m 5\n",
-      "\u001b[31m 6\n",
-      "\u001b[31m 7\n",
-      "\u001b[31m 8\n",
-      "\u001b[31m 9\n",
-      "\u001b[31m 10\n",
-      "\u001b[39m 11\n",
-      "\u001b[39m 12\n",
-      "\u001b[39m 13\n",
-      "\u001b[39m 14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range (0, 15):\n",
     "    if i>10:\n",
@@ -419,27 +576,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "394"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(economicos_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
